// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Variants component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Variant
      </label>
      <div
        className="form-dropzone style-square"
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              Upload a file or
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
        <input
          accept={undefined}
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Variant
      </label>
      <div
        className="form-dropzone style-square"
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              Upload a file or
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
        <input
          accept={undefined}
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is image renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        High Resolution Image
      </label>
      <div
        className="form-dropzone style-square"
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              Upload a file or
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              jpeg, tiff, gif, png
            </p>
          </div>
        </div>
        <input
          accept="image/*"
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Thumbnail Image
      </label>
      <div
        className="form-dropzone style-square"
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              Upload a file or
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              jpeg, tiff, gif, png
            </p>
          </div>
        </div>
        <input
          accept="image/*"
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is pdf renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Thumbnail Image
      </label>
      <div
        className="form-dropzone style-square"
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              Upload a file or
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              jpeg, tiff, gif, png
            </p>
          </div>
        </div>
        <input
          accept="image/*"
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;
